--- a/main.css
+++ b/main.css
@@ -73,7 +73,6 @@ h1 {
     display: flex;
     align-items: center;
     font-weight: bold;
-    line-height: 1.3;
     font-size: 1.4rem
 }
 
@@ -126,7 +125,9 @@ hr {
     width: 100%;
     text-align: left;
     margin: 10px auto;
-    padding: 10px;
+    padding-left: 10px;
+    padding-bottom: 30px;
+    padding-top: 5px;
 }
 
 .post:not(:last-of-type) {
@@ -204,7 +205,7 @@ hr {
 img {
     display: block;
     max-width: 100%;
-    padding-bottom: 10px;
+    margin: 25px 0;
 }
 
 img.left {
