--- a/colour_scheme.css
+++ b/colour_scheme.css
@@ -1,8 +1,8 @@
 :root {
-    --accent: rgb(35, 176, 255);
+    --accent: #24afff;
     --accent-alpha-70: rgba(35, 174, 255, .70);
-    --accent-alpha-20: rgba(35, 176, 255, .2);
-    --background: #1e1e1e;
-    --color: #e8e8d3;
+    --accent-alpha-20: rgba(35, 176, 255, 0.2);
+    --background: #363636;
+    --color: #ece9e9;
     --border-color: rgba(255, 255, 255, .1)
 }
