--- a/main.css
+++ b/main.css
@@ -1,25 +1,5 @@
-.header .menu {
-    margin: 10px 0
-}
-
-.header .menu__inner {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 0;
-    padding-left: 10px;
-}
-
-.header .menu__inner li.active {
-    color: var(--accent)
-}
-
-.header .menu__inner li:not(:last-of-type) {
-    margin-right: 20px;
-    margin-bottom: 10px;
-    flex: none;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@300;700&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css');
 html {
     box-sizing: border-box
 }
@@ -31,9 +11,13 @@ html {
 }
 
 body {
-    font-family: Hack;
-    font-size: 1rem;
-    line-height: 1.54;
+    text-align: left;
+    margin: 40px auto;
+    max-width: 670px;
+    padding: 0 10px;
+    line-height: 1.6;
+    font-family: Ubuntu, Hack, 'Open Sans';
+    font-size: 18px;
     background-color: var(--background);
     color: var(--color);
     text-rendering: optimizeLegibility;
@@ -42,141 +26,40 @@ body {
     -webkit-text-size-adjust: 100%
 }
 
-@media (max-width: 683px) {
-    body {
-        font-size: 1rem
-    }
+.header {
+    margin-top: 10px;
 }
 
-pre {
-    padding: 20px;
-    font-size: .95rem;
-    overflow: auto;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1)
-}
-
-@media (max-width: 683px) {
-    pre {
-        white-space: pre-wrap;
-        word-wrap: break-word
-    }
-}
-
-pre code {
-    padding: 0;
+.header .menu {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
     margin: 0;
-    background: none
 }
 
-h1 {
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-    font-size: 1.4rem
+.menu li.active {
+    color: var(--accent)
 }
 
-a {
-    color: inherit
-}
-
-p {
-    margin-bottom: 20px
-}
-
-ul {
-    margin-left: 30px;
-    padding: 0
-}
-
-li {
-    position: relative
-}
-
-@media (max-width: 683px) {
-    ul {
-        margin-left: 20px
-    }
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    padding: 40px;
-    max-width: 864px;
-    /*    min-height: 100vh;*/
-    margin: 0 auto
-}
-
-@media (max-width: 683px) {
-    .container {
-        padding: 20px
-    }
-}
-
-hr {
-    width: 100%;
-    border: none;
-    background: var(--border-color);
-    height: 1px
+.menu li {
+    margin-right: 20px;
+    margin-bottom: 10px;
 }
 
 .post {
-    width: 100%;
-    text-align: left;
-    margin: 10px auto;
-    padding-left: 10px;
-    padding-bottom: 30px;
-    padding-top: 5px;
-}
-
-.post:not(:last-of-type) {
-    border-bottom: 1px solid var(--border-color)
-}
-
-@media (max-width: 899px) {
-    .post {
-        max-width: 660px
-    }
+    margin: 30px auto;
 }
 
 .post-title {
     --border: 2px dashed var(--accent);
     position: relative;
     color: var(--accent);
-    margin: 0 0 15px;
-    padding-bottom: 15px;
     border-bottom: var(--border);
     font-weight: normal
 }
 
-.post-title a {
-    text-decoration: none
-}
-
-.post .post-tags-inline,
-.post .post-tags {
-    margin-bottom: 20px;
-    font-size: 1rem;
-    opacity: .5
-}
-
-.post-tags {
-    display: block
-}
-
-.post-tags-inline {
-    display: inline
-}
-
-@media (max-width: 683px) {
-    .post-tags-inline {
-        display: block
-    }
-}
-
 .post-content {
-    margin-top: 30px
+    margin-top: 24px;
 }
 
 .post ul {
@@ -190,6 +73,25 @@ hr {
     color: var(--accent)
 }
 
+a {
+    color: inherit
+}
+
+p {
+    margin-top: 0px
+}
+
+ul {
+    padding: 0;
+}
+
+hr {
+    width: 100%;
+    border: none;
+    background: var(--border-color);
+    height: 1px
+}
+
 .footer {
     border-top: 1px solid var(--border-color);
     padding: 30px 0;
@@ -198,7 +100,7 @@ hr {
 }
 
 .footer span {
-    font-size: 0.9rem;
+    font-size: 16px;
     opacity: .5;
 }
 
