--- a/main.css
+++ b/main.css
@@ -94,9 +94,7 @@ hr {
 
 .footer {
     border-top: 1px solid var(--border-color);
-    padding: 30px 0;
-    margin: 10px;
-    flex-grow: 0
+    padding-top: 20px
 }
 
 .footer span {
