--- a/main.css
+++ b/main.css
@@ -206,3 +206,14 @@ img.right {
     color: var(--background);
     background-color: var(--color);
 }
+
+.bmc-btn {
+    height: auto!important;
+    font-size: 16px!important;
+    padding: 5px!important;
+    min-width: auto!important;
+}
+
+.bmc {
+    border-bottom: none
+}
