--- a/main.css
+++ b/main.css
@@ -179,6 +179,7 @@ hr {
 img {
     display: block;
     max-width: 100%;
+    max-height: 50vh;
     margin: 25px 0;
 }
 
@@ -210,10 +211,6 @@ img.right {
 .bmc-btn {
     height: auto!important;
     font-size: 16px!important;
-    padding: 5px!important;
+    padding: 6px!important;
     min-width: auto!important;
-}
-
-.bmc {
-    border-bottom: none
 }
