--- a/main.css
+++ b/main.css
@@ -62,6 +62,8 @@ body {
 }
 
 .menu li {
+    min-width: 2.5em;
+    text-align: center;
     margin-right: 20px;
     margin-bottom: 10px;
     border-bottom: 2px solid var(--accent2-alpha-70);
@@ -209,6 +211,7 @@ img.right {
 }
 
 .bmc-btn {
+    margin-top: 5px;
     height: auto!important;
     font-size: 16px!important;
     padding: 6px!important;
