--- a/main.css
+++ b/main.css
@@ -55,7 +55,6 @@ body {
 
 .menu li.active {
     border-radius: 6px;
-    padding: 4px;
     box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, .8);
     color: var(--accent2);
     border-bottom: none
@@ -64,6 +63,7 @@ body {
 .menu li {
     min-width: 2.5em;
     text-align: center;
+    padding: 3px;
     margin-right: 20px;
     margin-bottom: 10px;
     border-bottom: 2px solid var(--accent2-alpha-70);
@@ -100,7 +100,7 @@ body {
 
 .video {
     opacity: 0.99;
-    padding-top: 20px;
+    margin-top: 40px;
     right: -15%;
 }
 
@@ -111,7 +111,7 @@ body {
 
 @media only screen and (max-width: 768px) {
     .youtube {
-        width: auto;
+        width: 70vw;
         height: auto;
     }
     .video {
@@ -121,7 +121,7 @@ body {
 }
 
 .post {
-    margin-bottom: 30px;
+    margin: 30px auto;
 }
 
 .post-title {
