--- a/main.css
+++ b/main.css
@@ -46,6 +46,10 @@ body {
     margin-top: 10px;
 }
 
+#header-list {
+    margin-left: -2px;
+}
+
 .header .menu {
     display: flex;
     flex-wrap: wrap;
@@ -53,20 +57,25 @@ body {
     margin: 0;
 }
 
+.menu li {
+    transition: box-shadow 0.3s ease-in-out;
+    text-align: center;
+    padding: 3px;
+    margin-right: 7px;
+    margin-left: 7px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid var(--accent2-alpha-70);
+}
+
 .menu li.active {
     border-radius: 6px;
     box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, .8);
     color: var(--accent2);
-    border-bottom: none
-}
-
-.menu li {
-    min-width: 2.5em;
-    text-align: center;
-    padding: 3px;
-    margin-right: 20px;
-    margin-bottom: 10px;
-    border-bottom: 2px solid var(--accent2-alpha-70);
+    border-bottom: none;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 .card {
