--- a/colour_scheme.css
+++ b/colour_scheme.css
@@ -6,6 +6,6 @@
     --accent-alpha-70: rgba(35, 174, 255, .70);
     --accent-alpha-20: rgba(35, 176, 255, 0.2);
     --background: #192734;
-    --color: #ece9e9;
+    --color: rgb(236, 233, 233);
     --border-color: rgba(255, 255, 255, .1)
 }
