--- a/main.css
+++ b/main.css
@@ -130,7 +130,7 @@ body {
 }
 
 .post {
-    margin: 30px auto;
+    margin: 22px auto;
 }
 
 .post-title {
@@ -208,13 +208,13 @@ img.right {
 }
 
 .button {
+    display: inline-block;
     user-select: none;
     cursor: pointer;
-    box-shadow: 0px 0px 0px transparent;
-    border: 0px solid transparent;
     padding: 8px 16px;
     border-radius: 4px;
     color: var(--color);
+    margin: 10px auto;
     background-color: var(--button);
 }
 
@@ -236,4 +236,8 @@ img.right {
     image-rendering: -webkit-crisp-edges;
     image-rendering: pixelated;
     image-rendering: crisp-edges;
+}
+
+#conway-slider {
+    margin: 10px auto;
 }
